--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,49 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+footer {
 }
 
-a {
-  color: #00B7FF;
+.card .card-content {
+  position:relative;
+  bottom: 1em;
+}
+
+table tr:nth-child(odd) td{
+  background-color: #FFF;
+}
+table tr:nth-child(even) td{
+  background-color: #DDD;
+}
+
+.first  {
+  background-color: #FFF;
+}
+
+.second {
+      background-color: #DDD;
+}
+
+.third {
+    background-color: #FFF;
+}
+.fourth {
+    background-color: #DDD;
+}
+
+.container .row {
+  margin-bottom: 0;
+}
+
+.maindiv {
+  display: flex;
+  flex-direction: column;
+}
+
+.createbutton {
+  margin-top: 1em;
+}
+
+.buttonrow {
+  display: flex;
+  justify-content: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
